2013-11-07 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_api.php: fixed the validate event with the
	new validation form.

2013-11-07  Ramon Novoa  <rnovoa@artica.es>

	* godmode/agentes/modificar_agente.php: Fixed a duplicated id.

2013-11-06  Sergio Martin <sergio.martin@artica.es>

	* include/functions_api.php: Fix create event typo 
	errors in api. Fix sent by tomas in incident #347

2013-11-06  Sergio Martin <sergio.martin@artica.es>

	* include/constants.php
	include/functions_graph.php: Added color collection in
	constants file and use it in custom graphs to avoid
	ugly black colors in graphs with more than three graphs
	Incident #346

2013-11-05  Sergio Martin <sergio.martin@artica.es>

	* include/api.php: Create a special call on Pandora FMS
	API to verify if it is a correct installation of Pandora 
	and get the Version.
	This call only retrieve "Pandora FMS [version] - [build]"
	without any security check.

2013-11-05  Sergio Martin <sergio.martin@artica.es>

	* include/javascript/jquery.pandora.js: Fixed "press
	on scape" close event on enterprise dialog

2013-11-05  Sergio Martin <sergio.martin@artica.es>

	* include/functions_tags.php: Fix the tags acl 
	check function to be compatible with acl propagation
	incident #345

2013-11-04  Sergio Martin <sergio.martin@artica.es>

	* operation/tree.php: Truncate the name of agents
	and modules in tree view to avoid ugly view for 
	incident #306

2013-11-04  Sergio Martin <sergio.martin@artica.es>

	* godmode/massive/massive_edit_modules.php: Added
	module description to massive operations for 
	incident #148

2013-11-04  Sergio Martin <sergio.martin@artica.es>

	* include/functions_groups.php: Fixed function that
	returns the user groups in tree way. It was broken
	when the user has acls over a group but not in his
	father. Incident: #342
	Merged from 4.1

2013-10-31 Hirofumi Kosaka <kosaka@rworks.jp>

	* include/functions_api.php: Added some parameters to
	'create_group' API function.
